--- a/ProjectUbuild/Views/Loan/Apply.cshtml
+++ b/ProjectUbuild/Views/Loan/Apply.cshtml
@@ -15,7 +15,7 @@
                   <a class="active" data-toggle="tab" href="#tab1" role="tab"><i class="fa fa-shopping-cart tab-icon"></i> <span>Loan Type</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="active" data-toggle="tab" href="#tab2" role="tab"><i class="fa fa-shopping-cart tab-icon"></i> <span>Options Type</span></a>
+                  <a class="" data-toggle="tab" href="#tab2" role="tab"><i class="fa fa-shopping-cart tab-icon"></i> <span>Options Type</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="" data-toggle="tab" href="#tab3" role="tab"><i class="fa fa-truck tab-icon"></i> <span>Check Eligibility</span></a>
@@ -28,49 +28,7 @@
                 </li>
               </ul>
               <!-- Tab panes -->
-              <div class="tab-content">
-                <div class="tab-pane padding-20 sm-no-padding active slide-left" id="tab1">
-                  <div class="row row-same-height">                   
-                    <div class="col-md-6">
-                      <div class="padding-30 sm-padding-5">
-                        <div data-pages="card" class="card card-default" id="card-basic">
-                          <div class="card-header  ">
-                            <div class="card-title">
-                              <h3>
-                                <div class="checkbox check-success checkbox-circle">
-                                  <input type="checkbox" value="1" id="fullhouse-check" name="loan-type">
-                                  <label for="fullhouse-check"> Full House</label>
-                                </div>
-                              </h3>
-                            </div>
-                            <div class="card-controls">
-                            </div>
-                          </div>                      
-                        </div>
-                      </div>
-                    </div>
-                    
-                    <div class="col-md-6">
-                      <div class="padding-30 sm-padding-5">                        
-                        <div data-pages="card" class="card card-default" id="card-basic">
-                          <div class="card-header  ">
-                            <div class="card-title">
-                              <h3>
-                                <div class="checkbox check-success checkbox-circle">
-                                  <input type="checkbox" value="1" id="phase-check" name="loan-type">
-                                  <label for="phase-check"> Phase</label>
-                                </div>
-                              </h3>
-                            </div>
-                            <div class="card-controls">
-                            </div>
-                          </div>
-                       
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+              
                 
                 <div class="tab-content">
                 <div class="tab-pane padding-20 sm-no-padding active slide-left" id="tab1">
@@ -251,6 +209,7 @@
                 </div>
               </div>
             </div>
+          </div>
           </div>
           <!-- END CONTAINER FLUID -->
      
