--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -35,3 +35,8 @@
 <!-- BEGIN PAGE LEVEL JS -->
 <script src="~/assets/js/dashboard.js" type="text/javascript"></script>
 <script src="~/assets/js/scripts.js" type="text/javascript"></script>
+<script src="~/Scripts/angular.min.js"></script>
+<script src="~/Scripts/angular-ui-router.min.js"></script>
+<script src="~/Scripts/angular-animate.min.js"></script>
+<script src="~/Scripts/app/app.module.js"></script>
+<script src="~/Scripts/app/services.factory.js"></script>
