--- a/ProjectUbuild/Views/Loan/Apply.cshtml
+++ b/ProjectUbuild/Views/Loan/Apply.cshtml
@@ -10,7 +10,7 @@
     
 
 
-<div data-ng-app="ubuild.app">
+<div data-ng-app="ubuild">
 
     <div class="container-fluid container-fixed-lg" data-ng-controller="LoanApplicationController as vm">
         <div id="rootwizard" class="m-t-50">
