--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -28,6 +28,7 @@
 <script src="~/assets/plugins/jquery-sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/skycons/skycons.js" type="text/javascript"></script>
 <script src="~/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <!-- END VENDOR JS -->
 <!-- BEGIN CORE TEMPLATE JS -->
 <script src="~/pages/js/pages.min.js"></script>
@@ -36,7 +37,9 @@
 <script src="~/assets/js/dashboard.js" type="text/javascript"></script>
 <script src="~/assets/js/scripts.js" type="text/javascript"></script>
 <script src="~/Scripts/angular.min.js"></script>
-<script src="~/Scripts/angular-ui-router.min.js"></script>
-<script src="~/Scripts/angular-animate.min.js"></script>
+@*<script src="~/Scripts/angular-animate.min.js"></script>*@
 <script src="~/Scripts/app/app.module.js"></script>
 <script src="~/Scripts/app/services.factory.js"></script>
+<script src="~/Scripts/app/utilities.factory.js"></script>
+<script src="~/Scripts/app/update-profile.conftroller.js"></script>
+
