adding eligibility ctrl after merge

--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -42,6 +42,7 @@
 <script src="~/assets/foundry/js/parallax.js"></script>
 <script src="~/assets/foundry/js/scripts.js"></script>
 <!-- BEGIN CORE TEMPLATE JS -->
+<script src="~/assets/js/Controllers/index.js"></script>
 <script src="~/pages/js/pages.min.js"></script>
 <!-- END CORE TEMPLATE JS -->
 <!-- BEGIN PAGE LEVEL JS -->
@@ -52,5 +53,6 @@
 <script src="~/Scripts/angular-animate.min.js"></script>
 <script src="~/Scripts/app/app.module.js"></script>
 <script src="~/Scripts/app/services.factory.js"></script>
+<script src="~/assets/js/Controllers/EligibilityCtrl.js"></script>
 
 
