--- a/ProjectUbuild/Views/Account/Login.cshtml
+++ b/ProjectUbuild/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@using ProjectUbuild.Models
+﻿@using System.Web.UI.WebControls
+@using ProjectUbuild.Models
 @model LoginViewModel
 
 @{
@@ -11,53 +12,7 @@
         @*<div class="login-container bg-white">
             <div class="p-l-50 m-l-20 p-r-50 m-r-20 p-t-50 m-t-30 sm-p-l-15 sm-p-r-15 sm-p-t-40">
                  
-                <!-- START Login Form -->
-                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "p-t-15", role = "form",id="form-login" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <h4>Sign in to your account.</h4>
-                    <hr/>
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="form-group form-group-default">
-                        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-group form-group-default">
-                        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                        <div class="col-md-10">
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <div class="checkbox">
-                                @Html.CheckBoxFor(m => m.RememberMe)
-                                @Html.LabelFor(m => m.RememberMe)
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Log in" class="btn btn-primary btn-cons m-t-10" />
-                        </div>
-                    </div>
-                    <p>
-                        @Html.ActionLink("Register as a new user", "Register")
-                    </p>
-                    @* Enable this once you have account confirmation enabled for password reset functionality
-            <p>
-                @Html.ActionLink("Forgot your password?", "ForgotPassword")
-            </p>*@
-               
-
-
-
-                 
-                <!--END Login Form-->
+                
                 @*<div class="pull-bottom sm-pull-bottom">
                     <div class="m-b-30 p-r-80 sm-m-t-20 sm-p-r-15 sm-p-b-20 clearfix">
                         <div class="col-sm-3 col-md-2 no-padding">
@@ -83,15 +38,35 @@
             <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
                 <div class="feature bordered text-center">
                     <h4 class="uppercase">Login Here</h4>
-                    <form class="text-left">
-                        <input class="form-control" type="text" placeholder="Username" />
-                        <input class="form-control" type="password" placeholder="Password" />
-                        <input type="submit" value="Login" />
-                    </form>
-                    <p class="mb0">
-                        Forgot your password?
-                        <a href="#">Click Here To Reset</a>
-                    </p>
+
+
+                    <!-- START Login Form -->
+                    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "text-left", role = "form", id = "form-login" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+
+                        <input type="submit" value="Submit"/>
+                        <p>
+                            @Html.CheckBoxFor(m => m.RememberMe)
+                            @Html.LabelFor(m => m.RememberMe)
+                        </p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                        <p>
+                            @Html.ActionLink("Register as a new user", "Register")
+                        </p>
+                        
+                    
+                       
+                        
+
+
+                    }
+                    
                 </div>
             </div>
         </div>
