--- a/ProjectUbuild/Views/Account/Register.cshtml
+++ b/ProjectUbuild/Views/Account/Register.cshtml
@@ -5,102 +5,6 @@
     Layout = "~/views/shared/_Layout.cshtml";
 }
 
- @*<div class="login-wrapper ">
-        <!-- START Login Background Pic Wrapper-->
-        <div class="bg-pic">
-            <!-- START Background Pic-->
-            <img src="~/assets/img/ghl-logo.jpg" alt="">
-            <!-- END Background Pic-->
-            <!-- START Background Caption-->
-            <div class="bg-caption pull-bottom sm-pull-bottom text-white p-l-20 m-b-20">
-                <h2 class="semi-bold text-white"></h2>
-                <p class="small">
-                    © 2018 GHL BANK.
-                </p>
-            </div>
-            <!-- END Background Caption-->
-        </div>
-        <!-- END Login Background Pic Wrapper-->
-        <!-- START Login Right Container-->
-        <div class="login-container bg-white">
-            <div class="p-l-50 m-l-20 p-r-50 m-r-20 p-t-50 m-t-30 sm-p-l-15 sm-p-r-15 sm-p-t-40">
-
-                <!-- START Login Form -->
-                @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "p-t-15", role = "form", id = "form-login" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <h4>Create a new account.</h4>
-                    <hr />
-                    @Html.ValidationSummary("", new { @class = "text-danger" })
-                <div class="form-group form-group-default">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-4 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                    </div>
-                </div>
-                    <div class="form-group form-group-default">
-                        @Html.LabelFor(m => m.Firstname, new { @class = "col-md-4 control-label" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(m => m.Firstname, new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <div class="form-group form-group-default">
-                        @Html.LabelFor(m => m.Lastname, new { @class = "col-md-4 control-label" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(m => m.Lastname, new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <div class="form-group form-group-default">
-                        @Html.LabelFor(m => m.Othernames, new { @class = "col-md-5 control-label" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(m => m.Othernames, new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <div class="form-group  form-group-default">
-                        @Html.LabelFor(m => m.Phonenumber, new { @class = "col-md-5 control-label" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(m => m.Phonenumber, new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <div class="form-group form-group-default">
-                        @Html.LabelFor(m => m.Password, new { @class = "col-md-4 control-label" })
-                        <div class="col-md-10">
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <div class="form-group form-group-default">
-                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-6 control-label" })
-                        <div class="col-md-10">
-                            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <div class="">
-                        <div class="col-md-offset-0 col-md-10">
-                            <input type="submit" class="btn btn-primary btn-cons m-t-10" value="Register" />
-                        </div>
-                    </div>
-                }
-               
-
-                <!--END Login Form-->
-                <div class="pull-bottom sm-pull-bottom">
-                    <div class="m-b-30 p-r-80 sm-m-t-20 sm-p-r-15 sm-p-b-20 clearfix">
-                        <div class="col-sm-3 col-md-2 no-padding">
-                            <img alt="" class="m-t-5" data-src="assets/img/demo/pages_icon.png" data-src-retina="assets/img/demo/pages_icon_2x.png" height="60" src="assets/img/demo/pages_icon.png" width="60">
-                        </div>
-                        <div class="col-sm-9 no-padding m-t-10">
-                            <p>
-                                <small>
-                                </small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- END Login Right Container-->
-    </div>*@
-
 
 <section class="cover fullscreen image-bg overlay">
     <div class="background-image-holder">
@@ -109,16 +13,21 @@
     <div class="container v-align-transform">
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
-                <div class="feature bordered text-center" style="margin-top:70px">
+                <div class="feature bordered text-center" style="margin-top:150px">
                     <h4 class="uppercase">Register Here</h4>
-                    <form class="text-left">
-                        <input type="text" name="name" placeholder="Username" />
-                        <input type="text" name="email" placeholder="Email Address" />
-                        <input type="text" name="mobile" placeholder="Phone Number" />
-                        <input type="password" placeholder="Password" />
-                        <input type="password" placeholder="Confirm Password" />
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+
+                    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "text-left", role = "form", id = "form-login" }))
+                    {
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email Address", autocomplete = "off" })
+                        @Html.TextBoxFor(m => m.Firstname, new { @class = "form-control", placeholder = "First name", autocomplete = "off" })
+                        @Html.TextBoxFor(m => m.Lastname, new { @class = "form-control", placeholder = "Last name", autocomplete = "off" })
+                        @Html.TextBoxFor(m => m.Phonenumber, new { @class = "form-control", placeholder = "Phone Number", autocomplete = "off" })
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password", autocomplete = "off" })
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password", autocomplete = "off" })
+
                         <input type="submit" value="Register" />
-                    </form>
+                    }
                     <p class="mb0">
                         By signing up, you agree to our
                         <a href="#">Terms Of Use</a>
@@ -130,4 +39,3 @@
     </div>
     <!--end of container-->
 </section>
-   
