--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -29,6 +29,12 @@
 <script src="~/assets/plugins/jquery-sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/skycons/skycons.js" type="text/javascript"></script>
 <script src="~/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
+<script src="~/assets/plugins/bootstrap-typehead/typeahead.bundle.min.js"></script>
+<script src="~/assets/plugins/bootstrap-typehead/typeahead.jquery.min.js"></script>
+<script src="~/assets/plugins/handlebars/handlebars-v4.0.5.js"></script>
+<script src="~/assets/plugins/ion-slider/js/ion.rangeSlider.min.js" type="text/javascript"></script>
+<script src="~/assets/plugins/jquery-nouislider/jquery.nouislider.min.js" type="text/javascript"></script>
+<script src="~/assets/plugins/jquery-nouislider/jquery.liblink.js" type="text/javascript"></script>
 <!-- END VENDOR JS -->
 <script src="~/assets/foundry/js/flickr.js"></script>
 <script src="~/assets/foundry/js/flexslider.min.js"></script>
