--- a/ProjectUbuild/Views/Shared/_Head.cshtml
+++ b/ProjectUbuild/Views/Shared/_Head.cshtml
@@ -22,4 +22,5 @@
 <link href="~/assets/plugins/summernote/css/summernote.css" rel="stylesheet" type="text/css" media="screen">
 <link href="~/assets/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css" media="screen">
 <link href="~/assets/plugins/bootstrap-timepicker/bootstrap-timepicker.min.css" rel="stylesheet" type="text/css" media="screen">
-<link href="~/assets/ages/css/pages-icons.css" rel="stylesheet" type="text/css">
+<link href="~/pages/css/pages.min.css" rel="stylesheet" />
+<link href="~/pages/css/pages-icons.css" rel="stylesheet" />
