--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -97,6 +97,10 @@
                             <li>
                                 @Html.ActionLink("FaQs", "FaQs", "Home", null, new { })
                             </li>
+                            <li class="hidden-lg">
+                                <i class="ti-email">&nbsp;</i>
+                                <span class="sub">info@ubuild.ghlbank.com</span>
+                            </li>
                         </ul>
                     </div>
 
