--- a/ProjectUbuild/assets/foundry/css/custom.css
+++ b/ProjectUbuild/assets/foundry/css/custom.css
@@ -83,7 +83,7 @@ input[type="submit"], button[type="submit"] {
             display: none;
         }
     /*inputs*/
-    #msform input, #msform textarea {
+    /*#msform input, #msform textarea {
         padding: 15px;
         border: 1px solid #ccc;
         border-radius: 3px;
@@ -93,10 +93,10 @@ input[type="submit"], button[type="submit"] {
         font-family: montserrat;
         color: #2C3E50;
         font-size: 13px;
-    }
+    }*/
     /*buttons*/
     #msform .action-button {
-        width: 100px;
+        width: 145px;
         background: #a542409e;
         font-weight: bold;
         /* color: white; */
