--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -349,7 +349,7 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group form-group-default required">
-                                        <label>Employer Type OfBiz </label>
+                                        <label>Employer Type Of Business </label>
                                         <input type="text" class="form-control" name="EmployerTypeOfBiz" required="">
                                     </div>
                                 </div>
@@ -398,13 +398,13 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group form-group-default required">
-                                        <label>EmergencyContactTitle </label>
+                                        <label>Emergency Contact Title </label>
                                         <input type="text" class="form-control" name="EmergencyContactTitle" required="">
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group form-group-default required">
-                                        <label>EmergencyContactFirstName </label>
+                                        <label>Emergency Contact FirstName </label>
                                         <input type="text" class="form-control" name="EmergencyContactFirstName" required="">
                                     </div>
                                 </div>
@@ -420,7 +420,7 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group form-group-default">
-                                        <label>EmergencyConactPhone  </label>
+                                        <label>Emergency Conact Phone  </label>
                                         <input type="text" class="form-control" name="EmergencyConactPhone">
                                     </div>
                                 </div>
@@ -430,13 +430,13 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group form-group-default required">
-                                        <label>EmergencyContactAddress </label>
+                                        <label>Emergency Contact Address </label>
                                         <input type="text" class="form-control" name="EmployerTypeOfBiz" required="">
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group form-group-default required">
-                                        <label>EEmergencyContactEmail </label>
+                                        <label>EEmergency Contact Email </label>
                                         <input type="text" class="form-control" name="EmployerPhoneNo" required="">
                                     </div>
                                 </div>
@@ -446,7 +446,7 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group form-group-default">
-                                        <label>EmergencyContactRship </label>
+                                        <label>Emergency Contact Relationship </label>
                                         <input type="text" class="form-control" name="EmployerEmail">
                                     </div>
                                 </div>
