loan application in progress

--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -63,5 +63,4 @@
 <script src="~/Scripts/app/utilities.factory.js"></script>
 <script src="~/Scripts/app/eligibility.controller.js"></script>
 <script src="~/Scripts/app/update-profile.conftroller.js"></script>
- 
-
+<script src="~/Scripts/app/loanapplication.controller.js"></script>
