changes to eligibility

--- a/ProjectUbuild/Views/Loan/Eligibility.cshtml
+++ b/ProjectUbuild/Views/Loan/Eligibility.cshtml
@@ -116,7 +116,7 @@
                     <fieldset>
                          
                         <input type="button" name="previous" class="previous action-button" value="Previous" />
-                        <input type="button" data-ng-click="checkEligibility()" style="width: 200px" class="previous action-button" value="Check Eligibility" />
+                        <input type="button" data-ng-click="checkEligibility()" style="width: 200px" class="action-button" value="Check Eligibility" />
                     </fieldset>
                 </form>
             </div>
