--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -47,7 +47,7 @@
 <script src="~/assets/foundry/js/smooth-scroll.min.js"></script>
 <script src="~/assets/foundry/js/parallax.js"></script>
 <script src="~/assets/foundry/js/scripts.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="~/assets/js/sweetalert.min.js"></script>
 <!-- BEGIN CORE TEMPLATE JS -->
 <script src="~/pages/js/pages.min.js"></script>
 <script src="~/assets/js/Controllers/index.js"></script>
