--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -12,10 +12,10 @@
         <nav class="">
             <div class="nav-utility">
                 <div class="module left">
-                    <i class="ti-location-arrow">&nbsp;</i>
-                    <span class="sub">Address here</span>
+                    <i class="fa fa-phone">&nbsp;</i>
+                    <span class="sub">Call Us Now : (+233) 0274121780</span>
                 </div>
-                <div class="module left">
+                <div class="module left hidden-sm">
                     <i class="ti-email">&nbsp;</i>
                     <span class="sub">info@ubuild.ghlbank.com</span>
                 </div>
